Resolves: tdf#105416 blank windows under HiDPI RTL

Change-Id: I819f06babd448c37ce2d58297562b640aba1c8c6